--- a/docs/deployment_guide/partner_editable/pre_deployment.adoc
+++ b/docs/deployment_guide/partner_editable/pre_deployment.adoc
@@ -9,24 +9,24 @@ This solution can be deployed in both AWS global regions and AWS China regions.
 
 === AWS China region pre-deployment steps
 
-. Download pre-complied tgz archives from https://packages.clickhouse.com/tgz/lts/ to your local.
+. Download pre-compiled archives from https://packages.clickhouse.com/tgz/lts/ to your local machine.
 
-* ClickHouse 23.3.8.21 on X86:
+* ClickHouse 24.3.3.102 on X86:
 +
 [source,bash]
 ----
-wget https://packages.clickhouse.com/tgz/lts/clickhouse-server-23.3.8.21-amd64.tgz
-wget https://packages.clickhouse.com/tgz/lts/clickhouse-common-static-23.3.8.21-amd64.tgz
-wget https://packages.clickhouse.com/tgz/lts/clickhouse-client-23.3.8.21-amd64.tgz
+wget https://packages.clickhouse.com/tgz/lts/clickhouse-server-24.3.3.102-amd64.tgz
+wget https://packages.clickhouse.com/tgz/lts/clickhouse-common-static-24.3.3.102-amd64.tgz
+wget https://packages.clickhouse.com/tgz/lts/clickhouse-client-24.3.3.102-amd64.tgz
 ----
 
-* ClickHouse 23.3.8.21 on ARM:
+* ClickHouse 24.3.3.102 on ARM:
 +
 [source,bash]
 ----
-wget https://packages.clickhouse.com/tgz/lts/clickhouse-server-23.3.8.21-arm64.tgz
-wget https://packages.clickhouse.com/tgz/lts/clickhouse-common-static-23.3.8.21-arm64.tgz
-wget https://packages.clickhouse.com/tgz/lts/clickhouse-client-23.3.8.21-arm64.tgz
+wget https://packages.clickhouse.com/tgz/lts/clickhouse-server-24.3.3.102-arm64.tgz
+wget https://packages.clickhouse.com/tgz/lts/clickhouse-common-static-24.3.3.102-arm64.tgz
+wget https://packages.clickhouse.com/tgz/lts/clickhouse-client-24.3.3.102-arm64.tgz
 ----
 
 . Create a S3 bucket in your AWS China account and upload the tgz archives to the bucket.
